# friends

./: .gitignore  Cargo.toml  build.rs  rustfmt.toml  test.py
client/: Cargo.toml
client/src/: auth.rs  main.rs  profile.rs  util.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
proto/: auth.proto  profile.proto
src/: auth_impl.rs  client.rs  lib.rs  main.rs  middleware.rs  mod.rs  profile_impl.rs  server.rs  util.rs
src/entity/: mod.rs  prelude.rs  profile.rs  user.rs
tests/: auth_test.rs  profile_test.rs  sign_up_test.rs
tests/util/: mod.rs
