[workspace]
members = [".", "migration"]

[package]
name = "friends"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "friends"
path = "src/client.rs"

[dependencies]
anyhow = "1.0.95"
atomic-take = "1.1.0"
bcrypt = "0.17.0"
chrono = "0.4.39"
futures = "0.3.31"
http = "1.2.0"
jsonwebtoken = "9.3.1"
lazy_static = "1.5.0"
prost = "0.13.5"
prost-types = "0.13.5"
regex = "1.11.1"
sea-orm = { version = "1.1.5", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
serde = "1.0.217"
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.12.3"
tower = "0.5.2"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.13.1", features = ["serde", "v4"] }

[build-dependencies]
anyhow = "1.0.95"
glob = "0.3.2"
prost-types = "0.13.5"
tonic-build = "0.12.3"
