[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
serde = "1.0.217"
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.12.3"
prost = "0.13.5"
prost-types = "0.13.5"
# Add the main package as a dependency to access the generated protobuf code
friends = { path = ".." }
